Add drop duplicate and drop null method